# oxygen

./: .pre-commit-config.yaml  MODULE.bazel  README.md
examples/input-system/: main.cpp  main_module.cpp  main_module.h
examples/using-platform-sdl/: main.cpp
oxygen/: BUILD
oxygen/base/: compilers.h  macros.h  platform.h  resource.h  resource_handle.h  resource_table.h  time.h  types.h
oxygen/base/test/: macros_test.cpp  platform_test.cpp  resource_handle_test.cpp  resource_table_test.cpp  time_test.cpp  types_test.cpp
oxygen/copts/: GENERATED_copts.bzl  copts.py
oxygen/core/: engine.cpp  engine.h  fwd.h  input_handler.h  module.h  system.h  version.cpp  version.h
oxygen/core/test/: input_handler_test.cpp  system_test.cpp  version_test.cpp
oxygen/engine-dll/: BUILD  api.cpp  api.h  dllmain.cpp
oxygen/engine-dll/test/: linked_engine_dll_test.cpp  loaded_engine_dll_test.cpp
oxygen/input/: action.cpp  action.h  action_triggers.cpp  action_triggers.h  action_value.h  fwd.h  input_action_mapping.cpp  input_action_mapping.h  input_mapping_context.cpp  input_mapping_context.h  input_system.cpp  input_system.h  types.h
oxygen/logging/: BUILD  delegating_sink.h  logging.h  macros.h  registry.cpp  registry.h
oxygen/logging/detail/: location_helper.cpp  registered_logger.cpp  registered_logger.h  registry_impl.cpp  registry_impl.h
oxygen/logging/test/: logging_test.cpp  main.cpp
oxygen/platform/: display.cpp  display.h  fwd.h  input.cpp  input.h  input_event.h  platform.cpp  platform.h  types.h  window.cpp  window.h
oxygen/platform-sdl/: display.cpp  display.h  event_utils.cpp  platform.cpp  platform.h  window.cpp  window.h
oxygen/platform-sdl/detail/: wrapper.cpp  wrapper.h
oxygen/world/: BUILD  entity.cpp  entity.h  transform.cpp  transform.h  types.h
(+5 files in other folders)
